# babel-lsp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: qa.yml  release.yml
editors/helix/: languages.toml
editors/neovim/: babel_lsp.lua
editors/zed/: Cargo.toml  extension.toml
editors/zed/languages/po/: config.toml
editors/zed/src/: lib.rs
fixtures/msg-empty-id/: main.py
fixtures/msg-empty-id/locale/de/LC_MESSAGES/: messages.po
fixtures/msg-format-before-call/: main.py
fixtures/msg-fstring-in-call/: main.py
fixtures/msg-implicit-concat/: main.py
fixtures/msg-implicit-concat/locale/de/LC_MESSAGES/: messages.po
fixtures/msg-missing-in-locale/: main.py
fixtures/msg-missing-in-locale/locale/fr/LC_MESSAGES/: messages.po
fixtures/msg-non-constant-id/: main.py
fixtures/msg-unknown-id/: main.py
fixtures/po-obsolete/locale/: messages.pot
pkg/aur/: PKGBUILD
scripts/: package-zed-extension.sh
specs/: 01-overview.md  constitution.md  glossary.md  index.md  roadmap.md
specs/features/: F00-template.md  F01-catalog-index.md  F02-message-extraction.md  F03-diagnostics.md  F04-completion.md  F05-hover.md  F06-navigation.md  F07-code-actions.md  F08-inlay-hints.md  F09-symbols.md  F10-rename.md  F11-hardcoded-strings.md  F12-code-lens.md  F13-catalog-commands.md  F14-editor-integration.md  F15-cli.md  F16-release-ci.md
specs/foundations/: E01-architecture.md  E02-folder-structure.md  E03-tech-stack.md  E07-data-model.md  E15-app-config.md  E17-testing.md  E29-e2e-testing.md
src/: config.rs  main.rs  server.rs  state.rs
src/catalog/: index.rs  loader.rs  mod.rs
src/cli/: check.rs  format.rs  mod.rs  pybabel_cmd.rs  stats.rs
src/extract/: jinja.rs  mod.rs  python.rs  types.rs
src/features/: code_action.rs  code_lens.rs  completion.rs  definition.rs  diagnostics.rs  document_link.rs  document_symbol.rs  hardcoded.rs  hover.rs  inlay_hint.rs  mod.rs  pybabel.rs  references.rs  rename.rs
src/util/: mod.rs  plural.rs  po_edit.rs
tests/: editor_config.rs  release_assets.rs
tests/e2e/: conftest.py  requirements.txt  test_lifecycle.py  test_noqa.py
tests/e2e/fixtures/clean_shopfront/app/: views.py
tests/e2e/fixtures/non_ascii/: views.py
(+29 files in other folders)
