[package]
name = "babel-lsp"
version = "0.1.5"
edition = "2024"
rust-version = "1.85"
description = "Language server for Python Babel i18n (.po/.pot catalog diagnostics, completion, hover, and more)"
license = "MIT"
repository = "https://github.com/alex-oleshkevich/babel-lsp"
homepage = "https://github.com/alex-oleshkevich/babel-lsp"
keywords = ["lsp", "i18n", "babel", "gettext", "python"]
categories = ["development-tools", "internationalization"]
authors = ["Alex Oleshkevich <techsupport@investerra.ch>"]

[dependencies]
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
ropey = "1"
dashmap = "6"
polib = "0.3"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-jinja2 = { git = "https://github.com/alex-oleshkevich/tree-sitter-jinja2" }
globset = "0.4"
walkdir = "2"
notify = "6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tempfile = "3"
owo-colors = "4.3.0"
